headers/x.h

typedef struct Ihandle_ Ihandle;
IUP_API Ihandle*  IupButton     (const char* title, const char* action);
IUP_API Ihandle*  IupFlatButton (const char* title);
IUP_API Ihandle*  IupFlatToggle (const char* title);
IUP_API Ihandle*  IupDropButton (Ihandle* dropchild);
IUP_API Ihandle*  IupFlatLabel  (const char* title);
IUP_API Ihandle*  IupFlatSeparator(void);
IUP_API Ihandle*  IupCanvas     (const char* action);
IUP_API Ihandle*  IupLabel      (const char* title);
IUP_API Ihandle*  IupList       (const char* action);
IUP_API Ihandle*  IupFlatList   (void);
IUP_API Ihandle*  IupText       (const char* action);
IUP_API Ihandle*  IupMultiLine  (const char* action);
IUP_API Ihandle*  IupToggle     (const char* title, const char* action);
IUP_API Ihandle*  IupProgressBar(void);
IUP_API Ihandle*  IupVal        (const char *type);
IUP_API Ihandle*  IupFlatVal    (const char *type);
IUP_API Ihandle*  IupFlatTree   (void);
IUP_API Ihandle*  IupTree       (void);
IUP_API Ihandle*  IupLink       (const char* url, const char* title);
IUP_API Ihandle*  IupAnimatedLabel(Ihandle* animation);
IUP_API Ihandle*  IupDatePick   (void);
IUP_API Ihandle*  IupCalendar   (void);
IUP_API Ihandle*  IupColorbar   (void);
IUP_API Ihandle*  IupGauge      (void);
IUP_API Ihandle*  IupDial       (const char* type);
IUP_API Ihandle*  IupColorBrowser(void);
/* Old controls, use SPIN attribute of IupText */
IUP_API Ihandle*  IupSpin       (void);
IUP_API Ihandle*  IupSpinbox    (Ihandle* child);